--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
+    "bignumber.js": "^9.0.1",
     "bnc-notify": "^1.5.1",
     "bnc-onboard": "^1.20.0",
     "ethers": "^5.0.32",
