--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
-    "bignumber.js": "^9.0.1",
     "bnc-onboard": "^1.20.0",
     "ethers": "^5.0.32",
     "react": "^17.0.1",
@@ -21,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "token-amount": "^0.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.4"
