--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@types/graphql": "^14.5.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "bnc-onboard": "^1.20.0",
+    "dayjs": "^1.10.4",
     "ethers": "^5.0.32",
+    "graphql-tag": "^2.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -22,6 +25,7 @@
     "styled-components": "^5.2.1",
     "token-amount": "^0.3.0",
     "typescript": "^4.1.2",
+    "urql": "^2.0.1",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.4"
   },
