--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "styled-components": "^5.2.1",
     "token-amount": "^0.3.0",
     "typescript": "^4.1.2",
