--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
+    "apexcharts": "^3.26.0",
     "bignumber.js": "^9.0.1",
     "bnc-onboard": "^1.20.0",
     "dayjs": "^1.10.4",
