--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 REACT_APP_FARM_SUBGRAPH_URL=https://api.thegraph.com/subgraphs/name/crisog/alpha-rinkeby-subgraph
-REACT_APP_MAINNET_RPC="https://mainnet.infura.io/v3/d108c2431380445bbb4010faa5f6be4e"
-REACT_APP_RINKEBY_RPC="https://rinkeby.infura.io/v3/d108c2431380445bbb4010faa5f6be4e"
-REACT_APP_ONBOARD_API_KEY="60ee75a0-a110-4d2a-8185-0e5902f1bc93"
+REACT_APP_MAINNET_RPC="<YOUR_MAINNET_RPC_URL>"
+REACT_APP_RINKEBY_RPC="<YOUR_RINKEBY_RPC_URL>"
+REACT_APP_ONBOARD_API_KEY="<YOUR_ONBOARD_API_KEY>"
