--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged yarn test"
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn test"
     }
   },
   "lint-staged": {
