--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn test"
+      "pre-commit": "yarn lint"
     }
   },
   "lint-staged": {
@@ -72,7 +71,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.1.3",
+    "husky": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
