Remove yarn test

--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint",
-      "pre-push": "yarn test"
+      "pre-commit": "yarn lint"
     }
   },
   "lint-staged": {
