Remove lint-staged

--- a/package.json
+++ b/package.json
@@ -48,13 +48,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint"
+      "pre-commit": "yarn lint"
     }
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "eslint --fix"
-    ]
   },
   "browserslist": {
     "production": [
