--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tooltip": "^4.2.18",
     "recharts": "^2.0.9",
     "styled-components": "^5.2.1",
     "token-amount": "^0.3.0",
