--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.10.4",
     "ethers": "^5.0.32",
     "graphql-tag": "^2.11.0",
+    "lottie-react": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
