--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 REACT_APP_FARM_SUBGRAPH_URL=https://api.thegraph.com/subgraphs/name/crisog/alpha-rinkeby-subgraph
-REACT_APP_MAINNET_RPC="<YOUR_MAINNET_RPC_URL>"
-REACT_APP_RINKEBY_RPC="<YOUR_RINKEBY_RPC_URL>"
-REACT_APP_ONBOARD_API_KEY="<YOUR_ONBOARD_API_KEY>"
+REACT_APP_MAINNET_RPC=<YOUR_MAINNET_RPC_URL>
+REACT_APP_RINKEBY_RPC=<YOUR_RINKEBY_RPC_URL>
+REACT_APP_ONBOARD_API_KEY=<YOUR_ONBOARD_API_KEY>
+REACT_APP_PRICE_FETCHER_URL=<YOUR_PRICE_FETCHER_URL>
